Solutions, Rational Numbers class added