@@ -1,26 +1,26 @@
 package uk.org.landeg.projecteuler;
 
-import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicInteger;
+import lombok.*;
+import lombok.extern.slf4j.Slf4j;
 
+import java.math.BigInteger;
+import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.IntStream;
+import java.util.stream.LongStream;
+
+@Slf4j
 public class Mathlib {
 	public static int sum (final int max) {
 		final int sum = (int)(((1 + max) * ((double) max / 2.0d)));
 		return sum;
 	}
-	
+
 	public static long sum (final long max) {
 		final long sum = (long)(((1 + max) * ((double) max / 2.0d)));
 		return sum;
 	}
-	
+
 	public static boolean isPalindrome (final int candidate) {
 		final List<Integer> digits = new ArrayList<>();
 		int value = candidate;
@@ -28,14 +28,14 @@ public class Mathlib {
 			digits.add(value % 10);
 			value /= 10;
 		} while (value > 0);
-		
+
 		boolean isPalindrome = true;
 		for (int idx  = 0 ; idx < digits.size() / 2 + 1; idx++) {
 			if (digits.get(idx) != digits.get(digits.size() - idx -1)) {
 				isPalindrome = false;
 			}
 		}
-		
+
 		return isPalindrome;
 	}
 
@@ -46,17 +46,17 @@ public class Mathlib {
 			digits.add((int)(value % 10));
 			value /= 10;
 		} while (value > 0);
-		
+
 		boolean isPalindrome = true;
 		for (int idx  = 0 ; idx < digits.size() / 2 + 1; idx++) {
 			if (digits.get(idx) != digits.get(digits.size() - idx -1)) {
 				isPalindrome = false;
 			}
 		}
-		
+
 		return isPalindrome;
 	}
-	
+
 	public static int obtainNumberLength (final int value) {
 		int len = 0;
 		int currentValue = value;
@@ -66,21 +66,21 @@ public class Mathlib {
 		} while (currentValue > 0);
 		return len;
 	}
-	
+
 	public static int divisorCount (final long value, final Collection<Integer> primes) {
 		final Map<Long, Integer> primeFactors = primeFactors(value, primes);
 		AtomicInteger valueHolder = new AtomicInteger(1);
 		primeFactors.entrySet().stream().forEach(entry -> valueHolder.set(valueHolder.get() * (entry.getValue() + 1)));
 		return valueHolder.get();
 	}
-	
+
 	public static Map<Long, Integer> primeFactors (
 			final long value,
 			final Collection<Integer> primes) {
 		long currentValue = value;
 		final Map<Long, Integer> primeFactors = new HashMap<>();
 		if (primes.contains(value)) {
-			primeFactors.put(value, 1); 
+			primeFactors.put(value, 1);
 		} else {
 			for (int prime : primes) {
 				int power = 0;
@@ -89,7 +89,7 @@ public class Mathlib {
 					power++;
 				}
 				if (power > 0) {
-					primeFactors.put(new Long(prime), power);
+					primeFactors.put(Long.valueOf(prime), power);
 				}
 				if (currentValue == 1) {
 					break;
@@ -98,7 +98,7 @@ public class Mathlib {
 		}
 		return primeFactors;
 	}
-	
+
 	public static long factorial (final int n) {
 		long nCurrent = (long) n;
 		long factorial = 1;
@@ -110,10 +110,10 @@ public class Mathlib {
 		} while (nCurrent > 1);
 		return factorial;
 	}
-	
+
 	public static BigInteger bigFactorial (final int n) {
 		BigInteger factorial;
-		
+
 		if (n < 20) {
 			factorial = BigInteger.valueOf(factorial(n));
 		} else {
@@ -125,7 +125,7 @@ public class Mathlib {
 		}
 		return factorial;
 	}
-	
+
 	public static int digitSum (final BigInteger val) {
 		BigInteger n = new BigInteger(val.toString());
 		final BigInteger TEN = BigInteger.valueOf(10L);
@@ -136,7 +136,7 @@ public class Mathlib {
 		} while (n.compareTo(BigInteger.ZERO) > 0);
 		return sum;
 	}
-	
+
 	public static Set<Integer> properDivisors (final int n, final Collection<Integer> primes) {
 		final Set<Integer> divisors = new HashSet<>();
 		divisors.add(1);
@@ -158,24 +158,13 @@ public class Mathlib {
 		}
 		return divisors;
 	}
-	/*
-	public static Set<Integer> properDivisors2 (final int n, final Collection<Integer> primes) {
-	  final Set<Integer> divisors = new HashSet<>();
-	  divisors.add(1);
-	  if (primes.contains(n)) {
-	    return divisors;
-	  }
-	  for (final int p : primes) {
-	    if (n % )
-	  }
-	}
-*/
+
 	public static Set<Integer> divisors (final int n, final Collection<Integer> primes) {
 		final Set<Integer> divisors = properDivisors(n, primes);
 		divisors.add(n);
 		return divisors;
 	}
-	
+
 	public static int sum (final Collection<Integer> numbers) {
 		int sum = 0;
 		for (int n : numbers) {
@@ -183,7 +172,7 @@ public class Mathlib {
 		}
 		return sum;
 	}
-	
+
 	public static int[] digits (final int n) {
 		final int max[] = new int [20];
 		int val = n;
@@ -200,7 +189,7 @@ public class Mathlib {
 		} while (idx-- > 0);
 		return digits;
 	}
-	
+
 	public static int[] digitFrequency (final int n) {
 		final int digits[] = new int[10];
 		int currentN = n;
@@ -220,7 +209,7 @@ public class Mathlib {
 		} while (currentN > 0);
 		return digits;
 	}
-	
+
 	public static int length (final int n) {
 		if (n < 10) {return 1;}
 		if (n < 100) {return 2;}
@@ -230,28 +219,27 @@ public class Mathlib {
 		if (n < 1000000) {return 6;}
 		if (n < 10000000) {return 7;}
 		if (n < 100000000) {return 8;}
-		if (n < 1000000000) {return 9;}
-		else throw new IllegalArgumentException("Number n is out of range");
+		if (n < 1000000000) {return 9;} else throw new IllegalArgumentException("Number n is out of range");
 	}
-	
+
 	public static int truncateLeft (final int n) {
 		return n / 10;
 	}
-	
+
 	public static int truncateRight (final int n) {
 		int truncated = 0;
 		int multiplier = 1;
 		int value = n;
-		
+
 		do {
 			truncated += multiplier * (value % 10);
 			value /= 10;
 			multiplier *= 10;
 		} while (value > 9);
-		
+
 		return truncated;
 	}
-	
+
 	public static int powi (final int base, final int power) {
 		int pow = power;
 		int result = base;
@@ -267,11 +255,11 @@ public class Mathlib {
 		concatinated += m;
 		return concatinated;
 	}
-	
-	
+
+
 	public static boolean isPandigital (
-			final int start, 
-			final int n, 
+			final int start,
+			final int n,
 			final int base) {
 		final int[] digits = digitFrequency(n);
 		return isPandigital(digits, start, base);
@@ -299,7 +287,7 @@ public class Mathlib {
 	public static boolean isPandigital (final int[] digits, final int base) {
 		return isPandigital(digits, 1, base);
 	}
-	
+
 	public static boolean isPandigital (Iterable<Integer> numbers, int base) {
 		final int[] combinedDigits = new int [10];
 		for (int n : numbers) {
@@ -310,7 +298,7 @@ public class Mathlib {
 		}
 		return isPandigital(combinedDigits, base);
 	}
-	
+
 	public static int replaceDigit (int n, int order, int newval) {
 		int sub = n / Mathlib.powi(10, order + 1) % 10 * Mathlib.powi(10, order);
 		return n - sub + newval * Mathlib.powi(10, order);
@@ -324,25 +312,166 @@ public class Mathlib {
 		return sum;
 	}
 
-  public static int gcd(int a, int b) {
-	 if (a == 0 || b == 0) {
-		  return 0;
-	  }
-    if (a == b) {
-      return a;
-    }
-    if (a == 1 || b == 1) {
-      return 1;
-    }
-    int lo = Math.min(a, b);
-    int hi = Math.max(a, b);
-    int c = lo;
-    do {
-      if (lo % c == 0 && hi % c == 0) {
-        return c;
-      }
-      c--;
-    } while (c > 0);
-    return 1;
-  }
+	public static int gcd(int a, int b) {
+		if (a == 0 || b == 0) {
+			return 0;
+		}
+		if (a == b) {
+			return a;
+		}
+		if (a == 1 || b == 1) {
+			return 1;
+		}
+		int lo = Math.min(a, b);
+		int hi = Math.max(a, b);
+		int c = lo;
+		do {
+			if (lo % c == 0 && hi % c == 0) {
+				return c;
+			}
+			c--;
+		} while (c > 0);
+		return 1;
+	}
+
+
+	static ThreadLocal<PrimeContext> primeContextHolder = new ThreadLocal<>();
+
+	public static long gcd(long... a) {
+//		if (LongStream.of(a).anyMatch(x -> x == 0l)) {
+//			return 0;
+//		}
+		var lo = LongStream.of(a)
+				.filter(x -> x > 0)
+				.map(Math::abs)
+				.min()
+				.orElseThrow();
+		if (lo == 1) {
+			return 1;
+		}
+
+		long gcd = 1;
+
+		var maxCheck = (long)(Math.sqrt(lo) + 1);
+		for (long candidate = 1 ; candidate < maxCheck ; candidate++) {
+			if (lo % candidate == 0) {
+				long hiCandidate = lo / candidate;
+				if (isCommonDivisor(hiCandidate, a)) {
+					gcd = hiCandidate;
+					break;
+				}
+
+				if (isCommonDivisor(candidate, a)) {
+					gcd = Math.max(candidate, gcd);
+				}
+			}
+		}
+		return gcd;
+	}
+
+	private static boolean isCommonDivisor(long candidate, long... n) {
+		for(var a : n) {
+			if (Math.abs(a) > 0 && a % candidate != 0) {
+				return false;
+			}
+		}
+		return true;
+	}
+
+//	public static int gcd(int... a) {
+//		var lo = IntStream.of(a)
+//				.filter(x -> x > 0)
+//				.min()
+//				.orElseThrow();
+//		for (int c = lo ; c > 0 ; c --) {
+//			boolean isGcd = true;
+//			for (int i = 0 ; i < a.length ; i++) {
+//				if (a[i] > 0 && a[i] % c > 0) {
+//					isGcd = false;
+//					break;
+//				}
+//			}
+//			if (isGcd) {
+//				return c;
+//			}
+//		}
+//		return 1;
+//	}
+
+	public static int lcm(int a, int b) {
+		if (a == b) {
+			return a;
+		}
+		int hi = Math.max(a, b);
+		int lo = Math.min(a, b);
+		if (hi % lo == 0) {
+			return hi;
+		}
+		return hi * lo;
+	}
+
+	public static long lcm(long a, long b) {
+		if (a == b) {
+			return a;
+		}
+		long hi = Math.max(a, b);
+		long lo = Math.min(a, b);
+		if (hi % lo == 0) {
+			return hi;
+		}
+		return hi * lo;
+	}
+
+	@NoArgsConstructor
+	@AllArgsConstructor
+	@Getter
+	@Setter
+	public static class PointLong {
+		private long x;
+		private long y;
+
+		public static PointLong[] of(long... pairs) {
+			if (pairs.length % 2 != 0) {
+				throw new IllegalArgumentException("must provide values in pairs");
+			}
+			PointLong[] points = new PointLong[pairs.length / 2];
+			for (int n = 0 ; n < points.length ; n++) {
+				points[n] = new PointLong(pairs[2 * n], pairs[2 * n + 1]);
+			}
+			return points;
+		}
+
+		@Override
+		public String toString() {
+			return String.format("[%d,%d]", x, y);
+		}
+	}
+
+	@NoArgsConstructor
+	@AllArgsConstructor
+	@Getter
+	@Setter
+	public static class PointBig {
+		private BigInteger x;
+		private BigInteger y;
+
+		public static PointBig[] of(int... pairs) {
+			BigInteger[] asBigIntegers = new BigInteger[pairs.length];
+			for (int i = 0 ; i < pairs.length ; i++) {
+				asBigIntegers[i] = BigInteger.valueOf(pairs[i]);
+			}
+			return of(asBigIntegers);
+		}
+
+		public static PointBig[] of(BigInteger... pairs) {
+			if (pairs.length % 2 != 0) {
+				throw new IllegalArgumentException("must provide values in pairs");
+			}
+			PointBig[] points = new PointBig[pairs.length / 2];
+			for (int n = 0 ; n < points.length ; n++) {
+				points[n] = new PointBig(pairs[2 * n], pairs[2 * n + 1]);
+			}
+			return points;
+		}
+	}
 }
